Bug 763011 - Report telemetry data for whether or not updates are enabled. r=rstrong